[gd_scene load_steps=3 format=3 uid="uid://3igdb1jenvn4"]

[ext_resource type="Script" path="res://scripts/encounter/encounter_ui.gd" id="1_uw3uw"]
[ext_resource type="Theme" uid="uid://dl8v06n638p0x" path="res://raid_the_land.tres" id="2_2ov2d"]

[node name="EncounterUi" type="Control"]
custom_minimum_size = Vector2(250, 200)
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_uw3uw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_right = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PlaceButtonContainer" type="MarginContainer" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PlaceButtonContainer"]
layout_mode = 2

[node name="EndPostFightButton" type="Button" parent="MarginContainer/PlaceButtonContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_2ov2d")
text = "END POST_FIGHT"

[node name="EndTurnButton" type="Button" parent="MarginContainer/PlaceButtonContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_2ov2d")
text = "END TURN"

[connection signal="pressed" from="MarginContainer/PlaceButtonContainer/VBoxContainer/EndPostFightButton" to="." method="_on_end_post_fight_button_pressed"]
[connection signal="pressed" from="MarginContainer/PlaceButtonContainer/VBoxContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
